--- a/Designer/Interface/Bindings/MSMQ.xaml
+++ b/Designer/Interface/Bindings/MSMQ.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="WCFArchitect.Interface.Bindings.TCP" x:ClassModifier="internal"
+﻿<Grid x:Class="WCFArchitect.Interface.Bindings.MSMQ" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,18 +11,21 @@
 	xmlns:Bindings="clr-namespace:WCFArchitect.Interface.Bindings"
 	d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" >
 	<Grid.Resources>
-		<Bindings:HostNameComparisonModeConverter x:Key="HostNameComparisonModeConverter" />
-		<Bindings:TransferModeConverter x:Key="TransferModeConverter" />
-		<Bindings:ServiceBindingTransactionProtocolConverter x:Key="ServiceBindingTransactionProtocolConverter" />
-		<Bindings:SecurityModeConverter x:Key="SecurityModeConverter" />
+		<Bindings:DeadLetterQueueConverter x:Key="DeadLetterQueueConverter" />
+		<Bindings:QueueTransferProtocolConverter x:Key="QueueTransferProtocolConverter" />
+		<Bindings:ReceiveErrorHandlingConverter x:Key="ReceiveErrorHandlingConverter" />
+		<Bindings:NetMsmqSecurityModeConverter x:Key="NetMsmqSecurityModeConverter" />
 		<Bindings:BindingSecurityAlgorithmSuiteConverter x:Key="BindingSecurityAlgorithmSuiteConverter" />
 		<Bindings:MessageCredentialTypeConverter x:Key="MessageCredentialTypeConverter" />
-		<Bindings:TcpClientCredentialTypeConverter x:Key="TcpClientCredentialTypeConverter" />
+		<Bindings:MsmqAuthenticationModeConverter x:Key="MsmqAuthenticationModeConverter" />
+		<Bindings:MsmqEncryptionAlgorithmConverter x:Key="MsmqEncryptionAlgorithmConverter" />
 		<Bindings:ProtectionLevelConverter x:Key="ProtectionLevelConverter" />
+		<Bindings:MsmqSecureHashAlgorithmConverter x:Key="MsmqSecureHashAlgorithmConverter" />
 		<pc:LongConverter x:Key="LongConverter" />
 		<pc:IntConverter x:Key="IntConverter" />
 	</Grid.Resources>
 	<Grid.RowDefinitions>
+		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
@@ -65,17 +68,20 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
-		<Label Grid.Column="0" Content="Reliable Sessions" FontSize="12pt" Margin="0,5,0,0" />
-		<ToggleButton Content="Enabled" IsChecked="{Binding Path=Binding.ReliableSessionEnabled}" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" Name="ReliableSessionEnabled" />
-		<Label Content="Inactivity Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
-		<c1datetime:C1TimeEditor Format="TimeSpan" Margin="125,5,5,5" Value="{Binding Path=Binding.ReliableSessionInactivityTimeout, Mode=TwoWay}" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" IsEnabled="{Binding Path=Binding.ReliableSessionEnabled}" Name="ReliableSessionInactivityTimeout" />
-		<ToggleButton Content="Ordered" IsChecked="{Binding Path=Binding.ReliableSessionsOrdered}" Margin="5" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" IsEnabled="{Binding Path=Binding.ReliableSessionEnabled}" Name="ReliableSessionsOrdered" />
+		<Label Grid.Column="0" Content="Binding Options" FontSize="12pt" Margin="0,5,0,0" />
+		<ToggleButton Content="Use Active Directory" IsChecked="{Binding Path=Binding.UseActiveDirectory}" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+		<ToggleButton Content="Use MSMQ Tracing" IsChecked="{Binding Path=Binding.UseMSMQTracing}" Margin="5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<ToggleButton Content="Use Source Journal" IsChecked="{Binding Path=Binding.UseSourceJournal}" Margin="5" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
+		<ToggleButton Content="Durable" IsChecked="{Binding Path=Binding.Durable}" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2"  />
+		<Label Content="Validity Duration:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" />
+		<c1datetime:C1TimeEditor Format="TimeSpan" Height="24" Margin="120,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" />
 	</Grid>
 	<Grid Grid.Row="5">
 		<Grid.RowDefinitions>
@@ -87,12 +93,17 @@
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
-		<Label Grid.Column="0" Content="Connection" FontSize="12pt" Margin="0,5,0,0" />
-		<ToggleButton IsChecked="{Binding Path=Binding.PortSharingEnabled}" Name="PortSharingEnabled" Content="Port Sharing" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
-		<Label Content="Max Connections:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
-		<c1:C1NumericBox Value="{Binding Path=Binding.MaxConnections}" Margin="125,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="MaxConnections" ValueChanged="MaxConnections_ValueChanged" Grid.Column="1" Grid.Row="1" FontSize="10pt" />
-		<Label Content="Listen Backlog:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
-		<c1:C1NumericBox Value="{Binding Path=Binding.ListenBacklog}" Margin="105,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="ListenBacklog" ValueChanged="ListenBacklog_ValueChanged" Grid.Column="2" Grid.Row="1" FontSize="10pt" />
+		<Label Grid.Column="0" Content="Receive Options" FontSize="12pt" Margin="0,5,0,0" />
+		<ToggleButton Content="Receive Context Enabled" IsChecked="{Binding Path=Binding.ReceiveContextEnabled}" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+		<Label Content="Receive Error Handling:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<ComboBox Height="23" Margin="155,5,5,5" SelectedIndex="{Binding Path=Binding.ReceiveErrorHandling, Converter={StaticResource ReceiveErrorHandlingConverter}}" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" >
+			<ComboBoxItem Content="Fault" />
+			<ComboBoxItem Content="Drop" />
+			<ComboBoxItem Content="Reject" />
+			<ComboBoxItem Content="Move" />
+		</ComboBox>
+		<Label Content="Receive Retry Count:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
+		<c1:C1NumericBox Margin="140,5,5,5" Value="{Binding Path=Binding.ReceiveRetryCount}" ShowButtons="False" Name="ReceiveRetryCount" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" ValueChanged="ReceiveRetryCount_ValueChanged" />
 	</Grid>
 	<Grid Grid.Row="6">
 		<Grid.RowDefinitions>
@@ -102,15 +113,12 @@
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
 		<Label Grid.Column="0" Content="Resources" FontSize="12pt" Margin="0,5,0,0" />
 		<Label Content="Max Buffer Pool Size:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
 		<pc:TextBox Text="{Binding Path=Binding.MaxBufferPoolSize, Converter={StaticResource LongConverter}}" Name="MaxBufferPoolSize" Height="23" Margin="140,5,5,5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" Validate="MaxBufferPoolSize_Validate" />
-		<Label Content="Max Buffer Size:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
-		<pc:TextBox Text="{Binding Path=Binding.MaxBufferSize, Converter={StaticResource LongConverter}}" Name="MaxBufferSize" Height="23" Margin="125,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Validate="MaxBufferSize_Validate" />
-		<Label Content="Max Received Message Size:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
-		<pc:TextBox Text="{Binding Path=Binding.MaxReceivedMessageSize, Converter={StaticResource LongConverter}}" Name="MaxReceivedMessageSize" Height="23" Margin="180,5,5,5" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" Validate="MaxReceivedMessageSize_Validate" />
+		<Label Content="Max Received Message Size:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<pc:TextBox Text="{Binding Path=Binding.MaxReceivedMessageSize, Converter={StaticResource LongConverter}}" Name="MaxReceivedMessageSize" Height="23" Margin="180,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Validate="MaxReceivedMessageSize_Validate" />
 	</Grid>
 	<Grid Grid.Row="7">
 		<Grid.RowDefinitions>
@@ -119,38 +127,47 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="*"/>
 		</Grid.ColumnDefinitions>
-		<Label Grid.Column="0" Content="Options" FontSize="12pt" Margin="0,5,0,0" />
-		<Label Content="Host Name Comparison Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
-		<ComboBox Height="23" Margin="200,5,5,5" VerticalAlignment="Top" SelectedIndex="{Binding Path=Binding.HostNameComparisonMode, Converter={StaticResource HostNameComparisonModeConverter}}" Grid.Column="0" Grid.Row="1" >
-			<ComboBox.Items>
-				<ComboBoxItem Content="Strong Wildcard" />
-				<ComboBoxItem Content="Exact" />
-				<ComboBoxItem Content="Weak Wildcard" />
-			</ComboBox.Items>
+		<Label Grid.Column="0" Content="Message Handling" FontSize="12pt" Margin="0,5,0,0" />
+		<ToggleButton Content="Exactly Once" IsChecked="{Binding Path=Binding.ExactlyOnce}" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+		<Label Content="Time To Live:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<c1datetime:C1TimeEditor Format="TimeSpan" Height="24" Margin="120,5,5,5" Value="{Binding Path=Binding.TimeToLive, Mode=TwoWay}" Name="TimeToLive" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<Label Content="Max Retry Cycles:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" />
+		<c1:C1NumericBox Value="{Binding Path=Binding.MaxRetryCycles}" Margin="120,5,5,0" VerticalAlignment="Top" ShowButtons="False" Name="MaxRetryCycles" ValueChanged="MaxRetryCycles_ValueChanged" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" />
+		<Label Content="Retry Cycle Delay:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" />
+		<c1datetime:C1TimeEditor Format="TimeSpan" Height="24" Margin="120,5,5,5" Value="{Binding Path=Binding.RetryCycleDelay, Mode=TwoWay}" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" />
+	</Grid>
+	<Grid Grid.Row="8">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="*"/>
+			<ColumnDefinition Width="*"/>
+		</Grid.ColumnDefinitions>
+		<Label Grid.Column="0" Content="Queues" FontSize="12pt" Margin="0,5,0,0" />
+		<Label Content="Dead Letter Queue:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+		<ComboBox Height="23" Margin="130,5,5,5" SelectedIndex="{Binding Path=Binding.DeadLetterQueue, Converter={StaticResource DeadLetterQueueConverter}}" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" >
+			<ComboBoxItem Content="None" />
+			<ComboBoxItem Content="System" />
+			<ComboBoxItem Content="Custom" />
 		</ComboBox>
-		<Label Content="Transfer Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
-		<ComboBox Height="23" Margin="140,5,5,5" SelectedIndex="{Binding Path=Binding.TransferMode, Converter={StaticResource TransferModeConverter}}" Grid.Column="1" Grid.Row="1" >
-			<ComboBoxItem Content="Buffered" />
-			<ComboBoxItem Content="Streamed" />
-			<ComboBoxItem Content="Streamed Request" />
-			<ComboBoxItem Content="Streamed Response" />
-		</ComboBox>
-		<ToggleButton Content="Transaction Flow" Height="23" IsChecked="{Binding Path=Binding.TransactionFlow}" Margin="5" Name="TransactionFlow"  Grid.Column="0" Grid.Row="2" />
-		<Label Content="Transaction Protocol:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" />
-		<ComboBox Height="23" Margin="140,5,5,5" VerticalAlignment="Top" SelectedIndex="{Binding Path=Binding.TransactionProtocol, Converter={StaticResource ServiceBindingTransactionProtocolConverter}}" IsEnabled="{Binding Path=Binding.TransactionFlow}" Grid.Column="1" Grid.Row="2" >
-			<ComboBox.Items>
-				<ComboBoxItem Content="Default" />
-				<ComboBoxItem Content="OLE Transactions" />
-				<ComboBoxItem Content="WS Atomic Transactions 1.1" />
-				<ComboBoxItem Content="WS Atomic Transactions October 2004" />
-			</ComboBox.Items>
+		<Label Content="Custom Dead Letter Queue:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<pc:TextBox Text="{Binding Path=Binding.CustomDeadLetterQueue}" Height="23" Margin="180,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" Name="CustomDeadLetterQueue" TextChanged="CustomDeadLetterQueue_TextChanged" Validate="CustomDeadLetterQueue_Validate" ToolTip="{Binding Path=Binding.CustomDeadLetterQueue}" />
+		<Label Content="Queue Transfer Protocol:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" />
+		<ComboBox Height="23" Margin="165,5,5,5" SelectedIndex="{Binding Path=Binding.QueueTransferProtocol, Converter={StaticResource QueueTransferProtocolConverter}}" VerticalContentAlignment="Center" Grid.Column="2" Grid.Row="1" >
+			<ComboBoxItem Content="Native" />
+			<ComboBoxItem Content="SRMP" />
+			<ComboBoxItem Content="Secure SRMP" />
 		</ComboBox>
 	</Grid>
-	<Grid Grid.Row="8" DataContext="{Binding Path=Binding.Security}">
+	<Grid Grid.Row="9" DataContext="{Binding Path=Binding.Security}">
 		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
@@ -162,12 +179,12 @@
 		</Grid.ColumnDefinitions>
 		<Label Grid.Column="0" Content="Security" FontSize="12pt" Margin="0,5,0,0" />
 		<Label Content="Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
-		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" SelectedIndex="{Binding Path=Mode, Converter={StaticResource SecurityModeConverter}}" >
+		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" SelectedIndex="{Binding Path=Mode, Converter={StaticResource NetMsmqSecurityModeConverter}}" >
 			<ComboBox.Items>
 				<ComboBoxItem Content="None" />
 				<ComboBoxItem Content="Transport" />
 				<ComboBoxItem Content="Message" />
-				<ComboBoxItem Content="Transport With Message Credential" />
+				<ComboBoxItem Content="Both" />
 			</ComboBox.Items>
 		</ComboBox>
 		<Label Content="Message Algorithm Suite:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" />
@@ -193,7 +210,7 @@
 			</ComboBox.Items>
 		</ComboBox>
 		<Label Content="Message Client Credential Type:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" />
-		<ComboBox Height="23" Margin="205,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" SelectedIndex="{Binding Path=MessageClientCredentialType, Converter={StaticResource MessageCredentialTypeConverter}}" >
+		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" SelectedIndex="{Binding Path=MessageClientCredentialType, Converter={StaticResource MessageCredentialTypeConverter}}" >
 			<ComboBox.Items>
 				<ComboBoxItem Content="None" />
 				<ComboBoxItem Content="Windows" />
@@ -202,20 +219,32 @@
 				<ComboBoxItem Content="Issued Token" />
 			</ComboBox.Items>
 		</ComboBox>
-		<Label Content="Transport Client Credential Type:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" />
-		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" SelectedIndex="{Binding Path=TransportClientCredentialType, Converter={StaticResource TcpClientCredentialTypeConverter}}" >
+		<Label Content="Transport Authentication Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" />
+		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" SelectedIndex="{Binding Path=TransportAuthenticationMode, Converter={StaticResource MsmqAuthenticationModeConverter}}" >
 			<ComboBoxItem Content="None" />
-			<ComboBoxItem Content="Windows" />
+			<ComboBoxItem Content="Windows Domain" />
 			<ComboBoxItem Content="Certificate" />
 		</ComboBox>
 		<Label Content="Transport Protection Level:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="3" />
-		<ComboBox Height="23" Margin="205,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="3" SelectedIndex="{Binding Path=TransportProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" >
+		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="3" SelectedIndex="{Binding Path=TransportProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" >
 			<ComboBoxItem Content="None" />
 			<ComboBoxItem Content="Sign" />
 			<ComboBoxItem Content="Encrypt and Sign" />
 		</ComboBox>
+		<Label Content="Trnasport Encryption Algorithm:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="4" />
+		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="4" SelectedIndex="{Binding Path=TransportEncryptionAlgorithm, Converter={StaticResource MsmqEncryptionAlgorithmConverter}}" >
+			<ComboBoxItem Content="RC4 Stream" />
+			<ComboBoxItem Content="AES" />
+		</ComboBox>
+		<Label Content="Transport Secure Hash Algorithm:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="4" />
+		<ComboBox Height="23" Margin="210,5,5,5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="4" SelectedIndex="{Binding Path=TransportSecureHashAlgorithm, Converter={StaticResource MsmqSecureHashAlgorithmConverter}}" >
+			<ComboBoxItem Content="MD5" />
+			<ComboBoxItem Content="SHA1" />
+			<ComboBoxItem Content="SHA256" />
+			<ComboBoxItem Content="SHA512" />
+		</ComboBox>
 	</Grid>
-	<Grid Grid.Row="9">
+	<Grid Grid.Row="10">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
