--- a/Designer/Interface/Service/Property.xaml
+++ b/Designer/Interface/Service/Property.xaml
@@ -23,7 +23,7 @@
 	<Label Grid.Row="1" Content="Data Type:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="80" />
 	<Data:TypeSelector OpenType="{Binding Path=PropertyData.ReturnType, Mode=TwoWay}" Project="{Binding Path=ServiceProject}"  Grid.Row="1" Margin="85,5,0,5" />
 	<Label Content="Name:" Grid.Row="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="80" />
-	<pc:TextBox Text="{Binding Path=PropertyData.ServerName}" Name="Name" Grid.Row="2" Height="23" Margin="85,5,0,5" ToolTip="{Binding Path=PropertyData.ServerName}" />
+	<pc:TextBox Text="{Binding Path=PropertyData.ServerName}" Grid.Row="2" Height="23" Margin="85,5,0,5" ToolTip="{Binding Path=PropertyData.ServerName}" />
 	<Label Grid.Row="3" Content="Options" FontSize="12pt" Margin="0,5,0,0" />
 	<Grid Grid.Row="4">
 		<Grid.ColumnDefinitions>
