--- a/Designer/Interface/Data/Data.xaml
+++ b/Designer/Interface/Data/Data.xaml
@@ -13,9 +13,6 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="pack://application:,,,/WCFArchitect;component/Themes/Colors.xaml" />
 				<ResourceDictionary>
-					<Data:DataScopeConverter x:Key="DataScopeConverter" />
-					<Data:DataScopeNameConverter x:Key="DataScopeNameConverter" />
-					<Data:ElementOrderConverter x:Key="ElementOrderConverter" />
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 				</ResourceDictionary>
 			</ResourceDictionary.MergedDictionaries>
@@ -42,7 +39,7 @@
 						<RowDefinition Height="*" />
 					</Grid.RowDefinitions>
 					<Label Grid.Row="0" Margin="-4,5,0,5" Padding="10,2,0,2" Content="Add Member:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
-					<Data:TypeSelector Project="{Binding OpenType}" x:Name="AddMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="375" Selected="AddMemberType_Selected" ValidationChanged="AddMemberType_ValidationChanged" />
+					<Data:TypeSelector Project="{Binding OpenType}" x:Name="AddMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="375" ValidationChanged="AddMemberType_ValidationChanged" />
 					<pc:TextBox x:Name="AddMemberName" LabelText="Name" Grid.Row="0" Margin="490,5,105,5" Validate="AddMemberName_Validate" TextChanged="AddMemberName_TextChanged" KeyUp="AddMemberName_KeyUp" />
 					<Button x:Name="AddMember" Grid.Row="0" Margin="5" Content="Add" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddMember_Click" />
 					<Grid Grid.Row="1" Margin="0,5,0,0">
@@ -72,8 +69,7 @@
 											</StackPanel>
 											<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
 												<TextBlock.Text>
-													<MultiBinding StringFormat="Server: {0} {1} {2}">
-														<Binding Path="DataScope" Converter="{StaticResource DataScopeNameConverter}" ConverterParameter='True' />
+													<MultiBinding StringFormat="Server: {0} {1}">
 														<Binding Path="DataType.TypeName" />
 														<Binding Path="DataName" />
 													</MultiBinding>
@@ -81,8 +77,7 @@
 											</TextBlock>
 											<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
 												<TextBlock.Text>
-													<MultiBinding StringFormat="Client: {0} {1} {2}">
-														<Binding Path="ClientScope" Converter="{StaticResource DataScopeNameConverter}" ConverterParameter='True' />
+													<MultiBinding StringFormat="Client: {0} {1}">
 														<Binding Path="ClientType.TypeName" />
 														<Binding Path="ClientName" />
 													</MultiBinding>
@@ -90,8 +85,7 @@
 											</TextBlock>
 											<TextBlock Visibility="{Binding Path=HasXAMLType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
 												<TextBlock.Text>
-													<MultiBinding StringFormat="XAML: {0} {1} {2}">
-														<Binding Path="XAMLScope" Converter="{StaticResource DataScopeNameConverter}" ConverterParameter='True' />
+													<MultiBinding StringFormat="XAML: {0} {1}">
 														<Binding Path="XAMLType.TypeName" />
 														<Binding Path="XAMLName" />
 													</MultiBinding>
