--- a/Designer/Interface/Enum/Enum.xaml
+++ b/Designer/Interface/Enum/Enum.xaml
@@ -50,7 +50,7 @@
 					<ColumnDefinition Width="135" />
 				</Grid.ColumnDefinitions>
 				<Label Content="Value Name:" Grid.Column="0" Grid.Row="0" Margin="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left"  />
-				<pc:TextBox Height="23" Margin="90,5,5,5" Name="AddValueName" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Validate="AddValueName_Validate" />
+				<pc:TextBox Height="23" Margin="90,5,5,5" Name="AddValueName" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" Validate="AddValueName_Validate" KeyUp="AddValueName_KeyUp" />
 				<Button Grid.Column="1" Grid.Row="0" Name="AddValue" Click="AddValue_Click" Height="23" Margin="5" IsEnabled="False" >
 					<StackPanel Orientation="Horizontal">
 						<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Add.png" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
