--- a/Designer/Interface/Dialogs/NewProject.xaml
+++ b/Designer/Interface/Dialogs/NewProject.xaml
@@ -1,10 +1,15 @@
 ﻿<Grid x:Class="WCFArchitect.Interface.Dialogs.NewProject"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        MinHeight="75" MinWidth="600">
-	<Label Content="Name:" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" />
-	<TextBox x:Name="NewProjectName" Height="23" Margin="90,12,10,0" VerticalAlignment="Top" />
-	<Label Content="Location:" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" />
-	<TextBox x:Name="NewProjectLocation" Height="23" Margin="90,41,91,0" VerticalAlignment="Top" />
-	<Button x:Name="NewProjectBrowse" Content="Browse..." Height="23" HorizontalAlignment="Right" Margin="0,41,10,0" VerticalAlignment="Top" Width="75" Click="NewProjectBrowse_Click" />
+        MinHeight="75" MinWidth="600" Margin="5">
+	<Grid.RowDefinitions>
+		<RowDefinition Height="Auto" />
+		<RowDefinition Height="Auto" />
+		<RowDefinition Height="*" />
+	</Grid.RowDefinitions>
+	<Label Content="Name:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="0" FontSize="12pt" />
+	<TextBox x:Name="NewProjectName" Height="27" Margin="80,5,5,5" VerticalContentAlignment="Center" Grid.Row="0" FontSize="12pt" TextChanged="NewProjectName_TextChanged" />
+	<Label Content="Directory:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" FontSize="12pt" />
+	<TextBox x:Name="NewProjectLocation" IsReadOnly="True" Height="Auto" Margin="80,5,90,5" VerticalContentAlignment="Center" Grid.Row="1" FontSize="12pt" TextChanged="NewProjectLocation_TextChanged" />
+	<Button x:Name="NewProjectBrowse" Content="Browse..." HorizontalAlignment="Right" Margin="5" VerticalAlignment="Top" Width="75" Grid.Row="1" FontSize="12pt" Click="NewProjectBrowse_Click" />
 </Grid>
