--- a/Designer/Interface/Service/Method.xaml
+++ b/Designer/Interface/Service/Method.xaml
@@ -114,7 +114,7 @@
 						<ColumnDefinition Width="95" />
 					</Grid.ColumnDefinitions>
 					<Label Content="Type:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
-					<Data:TypeSelector OpenType="{Binding Path=Type}" Project="{Binding Path=ServiceProject}" Height="23" Margin="46,5,5,5" x:Name="AddParameterType" Grid.Column="0" KeyUp="AddParameterType_KeyUp" Selected="AddParameterType_Selected" ValidationChanged="AddParameterType_ValidationChanged" />
+					<Data:TypeSelector OpenType="{Binding Path=Type}" Project="{Binding Path=ServiceProject}" Height="23" Margin="46,5,5,5" x:Name="AddParameterType" Grid.Column="0" KeyUp="AddParameterType_KeyUp" ValidationChanged="AddParameterType_ValidationChanged" />
 					<Label Content="Name:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="1" />
 					<pc:TextBox Height="23" Margin="53,5,5,5" Name="AddParameterName" Grid.Column="1" KeyUp="AddParameterName_KeyUp" TextChanged="AddParameterName_TextChanged" Validate="AddParameterName_Validate" />
 					<Button Grid.Column="2" Name="AddParameter" Click="AddParameter_Click" Height="23" Margin="5,0" IsEnabled="False" >
