--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:Data="clr-namespace:WCFArchitect.Interface.Data"
 	  xmlns:Docs="clr-namespace:WCFArchitect.Interface.Documentation"
+	  xmlns:c1="http://schemas.componentone.com/wpf/Basic"
 	  xmlns:pc="http://schemas.propsectivesoftware.com/pc"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -16,6 +17,7 @@
 					<Data:ElementOrderConverter x:Key="ElementOrderConverter" />
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 					<pc:NullBoolValueConverter x:Key="NullBoolValueConverter" />
+					<Data:AutoDataUpdateModeConverter x:Key="AutoDataUpdateModeConverter" />
 				</ResourceDictionary>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
@@ -32,6 +34,8 @@
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
+		<RowDefinition Height="Auto" />
+		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
 	<TextBlock Grid.Row="0" FontSize="14pt" >
 		<TextBlock.Text>
@@ -109,6 +113,26 @@
 		<pc:TextBox Name="AttachedTargetTypes" Grid.Row="1" Grid.Column="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedTargetTypes}" ToolTip="Please enter the Target Types as a common seperated list." />
 		<pc:TextBox Name="AttachedAttributeTypes" Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedAttributeTypes}" ToolTip="Please enter the Attribute Types as a common seperated list." />
 	</Grid>
-	<Label Grid.Row="6" Content="Documentation" FontSize="12pt" Margin="0,5,0,0" />
-	<Docs:Standard x:Name="Docs" Grid.Row="7" Margin="0,5,0,0" IsProperty="True" MinHeight="200" Documentation="{Binding Path=Element.Documentation}" />
+	<Grid Name="AutoDataGrid" Grid.Row="6" Margin="0,5,0,0" Visibility="{Binding Path=Element.AutoDataEnabled, Converter={StaticResource BoolVisibilityConverter}}" >
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Automatic Data Update" FontSize="12pt" />
+		<ToggleButton Grid.Row="1" Grid.Column="0" Content="Update ID" VerticalContentAlignment="Center" Margin="5" Padding="2,0" IsChecked="{Binding Path=Element.IsAutoDataID}" IsEnabled="{Binding Path=Element.IsValidAutoDataID}" ToolTip="Determines if the attribute can be browsed." />
+		<Label Content="Update Mode:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" Grid.Column="1" />
+		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" SelectedIndex="{Binding Path=Element.AutoDataUpdateMode, Converter={StaticResource AutoDataUpdateModeConverter}}" Grid.Column="1" Grid.Row="1" >
+			<ComboBoxItem Content="Immediate" />
+			<ComboBoxItem Content="Batch" />
+		</ComboBox>
+		<Label Content="Thread Lock Timeout:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" Grid.Column="2" />
+		<c1:C1NumericBox Value="{Binding Path=Element.AutoDataTimeout}" Format="G10" Margin="140,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateTimeout" ValueChanged="UpdateTimeout_ValueChanged" Grid.Column="2" Grid.Row="1" FontSize="10pt" />
+	</Grid>
+	<Label Grid.Row="7" Content="Documentation" FontSize="12pt" Margin="0,5,0,0" />
+	<Docs:Standard x:Name="Docs" Grid.Row="8" Margin="0,5,0,0" IsProperty="True" MinHeight="200" Documentation="{Binding Path=Element.Documentation}" />
 </Grid>
