--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -51,7 +51,7 @@
 									</TextBlock.Text>
 								</TextBlock>
 							</StackPanel>
-							<Button Grid.Column="1" x:Name="DeleteServiceOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteServiceOperation_Click">
+							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
 								<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 							</Button>
 						</Grid>
@@ -64,7 +64,7 @@
 								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
 							</MultiDataTrigger>
 							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" >
-								<Setter TargetName="DeleteServiceOperation" Property="Visibility" Value="Visible" />
+								<Setter TargetName="DeleteOperation" Property="Visibility" Value="Visible" />
 							</DataTrigger>
 							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
 								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
@@ -95,7 +95,7 @@
 									</TextBlock.Text>
 								</TextBlock>
 							</StackPanel>
-							<Button Grid.Column="1" x:Name="DeleteCallbackOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteCallbackOperation_Click">
+							<Button Grid.Column="1" x:Name="DeleteProperty" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteProperty_Click">
 								<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 							</Button>
 						</Grid>
@@ -108,7 +108,7 @@
 								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
 							</MultiDataTrigger>
 							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" >
-								<Setter TargetName="DeleteCallbackOperation" Property="Visibility" Value="Visible" />
+								<Setter TargetName="DeleteProperty" Property="Visibility" Value="Visible" />
 							</DataTrigger>
 							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
 								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
@@ -171,7 +171,7 @@
 							<RowDefinition Height="*" />
 						</Grid.RowDefinitions>
 						<Label Grid.Row="0" Margin="0,5,0,5" Padding="8,2,0,2" Content="Add Operation:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
-						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="325" Selected="AddServiceMemberType_Selected" ValidationChanged="AddServiceMemberType_ValidationChanged" />
+						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="325" ValidationChanged="AddServiceMemberType_ValidationChanged" />
 						<pc:TextBox x:Name="AddServiceMemberName" LabelText="Name" Grid.Row="0" Margin="440,5,205,5" Validate="AddServiceMemberName_Validate" TextChanged="AddServiceMemberName_TextChanged" KeyUp="AddServiceMemberName_KeyUp" />
 						<Button x:Name="AddServiceMethod" Grid.Row="0" Margin="0,5,105,5" Content="Method" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddServiceMethod_Click" />
 						<Button x:Name="AddServiceProperty" Grid.Row="0" Margin="5" Content="Property" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddServiceProperty_Click" />
@@ -199,7 +199,7 @@
 							<RowDefinition Height="*" />
 						</Grid.RowDefinitions>
 						<Label Grid.Row="0" Margin="0,5,0,5" Padding="8,2,0,2" Content="Add Operation:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
-						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddCallbackMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="325" Selected="AddCallbackMemberType_Selected" ValidationChanged="AddCallbackMemberType_ValidationChanged" />
+						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddCallbackMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="325" ValidationChanged="AddCallbackMemberType_ValidationChanged" />
 						<pc:TextBox x:Name="AddCallbackMemberName" LabelText="Name" Grid.Row="0" Margin="440,5,205,5" Validate="AddCallbackMemberName_Validate" TextChanged="AddCallbackMemberName_TextChanged" KeyUp="AddCallbackMemberName_KeyUp" />
 						<Button x:Name="AddCallbackMethod" Grid.Row="0" Margin="0,5,105,5" Content="Method" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddCallbackMethod_Click" />
 						<Button x:Name="AddCallbackProperty" Grid.Row="0" Margin="5" Content="Property" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddCallbackProperty_Click" />
